fix: fixed module imports

--- a/src/app/pages/app/app.component.html
+++ b/src/app/pages/app/app.component.html
@@ -1,3 +1,5 @@
-APP LAYOUT
+<mat-toolbar color="primary" [class.mat-elevation-z4]="true">
+  <span>Angular Boilerplate</span>
+</mat-toolbar>
 
 <router-outlet></router-outlet>
