--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -1,8 +1,6 @@
-<h1>Login Page</h1>
 
-<button mat-button>Basic</button>
-    <button mat-button color="primary">Primary</button>
-    <button mat-button color="accent">Accent</button>
-    <button mat-button color="warn">Warn</button>
-    <button mat-button disabled>Disabled</button>
-    <a mat-button href="https://www.google.com/" target="_blank">Link</a>
+<div fxLayout="row" fxLayoutAlign="space-around stretch" style="height: 100%;">
+  <div fxFlex fxLayoutAlign="center center" style="background-color: red;">1</div>
+  <div fxFlex fxLayoutAlign="center center" style="background-color: blue;">2</div>
+  <div fxFlex fxLayoutAlign="center center" style="background-color: cyan;">3</div>
+</div>
