--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="row" fxLayoutAlign="space-around stretch" style="height: 100%;">
-  <div
+  <mat-card
     fxFlex.xl="40%"
     fxFlex.lg="40%"
     fxFlex.md="40%"
@@ -9,12 +9,12 @@
     fxHide.xs
     fxLayout="column"
     fxLayoutAlign="space-between center"
-    style="background-color: #6c63ff; border-radius: 0 75px 75px 0;"
+    style="background-color: #3f51b5; border-radius: 0 75px 75px 0;"
   >
-    <div>
+    <mat-card-title>
       <h1 style="font-size: 52px; margin-bottom: 0; color: #fff;">Sign In</h1>
       <h3 style="margin: 0;">AngularBoilerplate</h3>
-    </div>
+    </mat-card-title>
     <!-- src="/assets/svg/mobile-login.svg" -->
     <img
       src="/assets/icons/icon-512x512.png"
@@ -22,7 +22,7 @@
       alt="login svg"
       style="padding-bottom: 7rem;"
     />
-  </div>
+  </mat-card>
   <div
     fxFlex.xl="60%"
     fxFlex.lg="60%"
