ui: added a drawer service to handle toggling of drawer from any component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
+<!-- <div
+  class="router-outlet"
+  style="height: 100%; width: 100%;"
+  [@fromLeftEasing]="getState(o)"
+>
+  <router-outlet #o="outlet"> </router-outlet>
+</div> -->
+
 <router-outlet></router-outlet>
