--- a/src/app/pages/app/dashboard/dashboard.component.html
+++ b/src/app/pages/app/dashboard/dashboard.component.html
@@ -1,1 +1,30 @@
-<h1>Dashboard View</h1>
+<div fxLayout="column">
+  <mat-toolbar color="primary" [class.mat-elevation-z4]="true" style="position: fixed;">
+    <button
+      (click)="drawerService.toggle()"
+      mat-icon-button
+      class="example-icon"
+      aria-label="Example icon-button with menu icon"
+    >
+      <mat-icon>menu</mat-icon>
+    </button>
+  </mat-toolbar>
+
+  <main style="margin-left: 1rem; margin-right: 1rem;">
+    <h1>Dashboard View</h1>
+    <h1>Dashboard View</h1>
+    <h1>Dashboard View</h1>
+    <h1>Dashboard View</h1>
+    <h1>Dashboard View</h1>
+    <h1>Dashboard View</h1>
+    <h1>Dashboard View</h1>
+    <h1>Dashboard View</h1>
+    <h1>Dashboard View</h1>
+    <h1>Dashboard View</h1>
+    <h1>Dashboard View</h1>
+    <h1>Dashboard View</h1>
+    <h1>Dashboard View</h1>
+    <h1>Dashboard View</h1>
+    <h1>Dashboard View</h1>
+  </main>
+</div>
