--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,10 @@ body {
   // font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
+mat-icon{
+  font-family: 'Material Icons' !important;
+}
+
 * {
   font-family: "Poppins", sans-serif !important;
 }
